--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cosc612groupeproj-visitationmanagement",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
