--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "yesql": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
