--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "esModuleInterop": true,
         "noImplicitAny": false,
-        "target": "es6"
+        "target": "es6",
+        "lib": ["es6"]
     }
 }
