--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "npm run app.ts",
+    "start": "npm run",
     "test": "nodemon"
   },
   "repository": {
