--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,11 @@
         "noImplicitAny": false,
         "target": "es6",
         "lib": ["es6"],
-        "moduleResolution": "node12"
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "node_modules/*"
+            ]
+        }
     }
 }
