--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
         "target": "es6",
         "lib": ["es6"],
         "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*"
-            ]
-        }
+        // "paths": {
+        //     "*": [
+        //         "node_modules/*"
+        //     ]
+        // }
     }
 }
