--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "node -r ts-node/register app.ts",
+    "start": "ts-node app.ts",
     "test": "nodemon",
     "build": "tsc"
   },
