--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "pg": "^8.7.3",
-    "yesql": "^5.0.0"
+    "yesql": "^5.0.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -30,9 +32,7 @@
     "@types/helmet": "^4.0.0",
     "@types/node": "^17.0.23",
     "@types/pg": "^8.6.5",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "nodemon": "^2.0.15"
   },
   "license": "ISC",
   "bugs": {
